Animation data are not appended even if I append armature object. #42882

Closed
opened 2014-12-12 09:15:04 +01:00 by perfection cat · 9 comments

System Information
Windows XP 32bits

Blender Version
Broken: 2.72b
Worked: 2.49b

Short description of error
Animation data are not appended even if I append armature object.

Exact steps for others to reproduce the error
Animation data are not appended even if I append the scene root object of the blend file which I attached.

**System Information** Windows XP 32bits **Blender Version** Broken: 2.72b Worked: 2.49b **Short description of error** Animation data are not appended even if I append armature object. **Exact steps for others to reproduce the error** Animation data are not appended even if I append the scene root object of the blend file which I attached.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author
[AppendAnimReport.blend](https://archive.blender.org/developer/F130995/AppendAnimReport.blend)

Added subscriber: @mont29

Added subscriber: @mont29

Yeah... To be exact, the action is imported, but for some reason it is empty, and not even linked to the armature object. Will investigate that one.

Yeah... To be exact, the action is imported, but for some reason it is empty, and not even linked to the armature object. Will investigate that one.
Bastien Montagne self-assigned this 2014-12-12 10:19:46 +01:00

Ok, so quick answer is, your file is 2.49 one, and we never ever do any update/conversion when appending or linking, lib files are assumed up to date.

We need a warning for user here, though, will add that.

Ok, so quick answer is, your file is 2.49 one, and we never ever do any update/conversion when appending or linking, lib files are assumed up to date. We need a warning for user here, though, will add that.

This issue was referenced by a6343696c1

This issue was referenced by a6343696c1f349a75604df24d80f63278ebc19f4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a6343696c1.

Closed by commit a6343696c1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42882
No description provided.