Fix T42882: Now warn user when trying to append/link from older blender files.

Since we do not make any conversion in this case, worth warning user about
potential issues!