source/blender/windowmanager/intern/wm_operators.c
@@ -2643,6 +2643,15 @@ static int wm_link_append_exec(bContext *C, wmOperator *op)
 	lib = mainl->curlib;
 	BLI_assert(lib);
 
+	if (mainl->versionfile < BLENDER_VERSION ||
+	    (mainl->versionfile == BLENDER_VERSION && mainl->subversionfile < BLENDER_SUBVERSION))
+	{
+		BKE_reportf(op->reports, RPT_WARNING,
+		            "Linking or appending from an older .blend file format (%d.%d), no conversion will be done! "
+		            "You may want to re-save your lib file with current Blender",
+		            mainl->versionfile, mainl->subversionfile);
+	}
+
 	if (totfiles == 0) {
 		BLO_library_append_named_part_ex(C, mainl, &bh, name, idcode, flag);
 	}
